fix overflow hidden

--- a/fancy.css
+++ b/fancy.css
@@ -152,7 +152,6 @@ height: 90px;
     width: 50%;
     margin: auto;
     margin-right : 150px;
-    overflow: hidden;
     flex-basis: 90%
 }
 .button_1{
@@ -183,7 +182,7 @@ height: 90px;
         display: none;
         }
     .container_hi{
-        margin-right: 0px;
+        margin-right: 5px;
     }
     .small_bar{
         display: inline;
